--- a/style.css
+++ b/style.css
@@ -44,3 +44,19 @@ h1 {
 }
 /*Header*/
 
+/*main*/
+
+main p  {
+    font-size: 25px;
+}
+
+.Highlighted {
+    background-color: yellow;
+}
+
+ul {
+    font-size: 20px;
+    list-style-position: inside;
+    padding-left: 0;
+}
+
