--- a/style.css
+++ b/style.css
@@ -60,3 +60,44 @@ ul {
     padding-left: 0;
 }
 
+table {
+    border-spacing: 0;
+    width: 100%;
+}
+
+thead  {
+    background-color: rgb(32, 169, 229);
+    color: white;
+}
+
+.first-column, .second-column {
+    width: 25%;
+}
+
+.third-column {
+    width: 50%;
+}
+
+tbody tr {
+    background-color: rgb(177, 229, 242);
+    height: 50px;
+}
+
+.white-row {
+    background-color: white;
+}
+
+/*footer*/
+
+footer {
+    font-size: 25px;
+    font-weight: bold;
+    color: rgba(0, 0, 0, 0.5);
+}
+
+.pc-photo {
+    
+}
+
+
+
