--- a/style.css
+++ b/style.css
@@ -95,9 +95,41 @@ footer {
     color: rgba(0, 0, 0, 0.5);
 }
 
-.pc-photo {
-    
+.pc-photo, .graph-photo {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 300px;
+    height: 300px;
+    position: relative;
 }
+
+.pc-photo {
+    background-image: url(img/img/monitor.jpg);
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.graph-photo {
+    background-image: url(img/img/graph.jpg);
+}
+
+.photo-link-1 {
+    color: white;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+
+.photo-link-2 {
+    color: white;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+
+
+
 
 
 
